crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__composition__composed_phases_are_hygienic_and_deterministic.snap
---
source: crates/nash-codegen/src/optimizer_tests/composition.rs
expression: "format!(\"{}\\n--- fresh Core\\n{}\\n--- lifted Core\\n{}\\n--- signatures before ANF\\n{}\\n--- ANF Core\\n{}\\n--- optimized recursive Core\\n{}\\n--- rewritten Core (no second ANF)\\n{}\\n--- ordinary lowered output\\n{}\",\nsemantic_snapshot(&fixture), pretty(fresh), pretty(lifted), pretty(shortened),\npretty(normalized), pretty(optimized), pretty(rewritten), lowered.uplc)"
---
--- unoptimized Core
let wrap#2 : int -> Data = \x#1 : int -> iData x#1 in
let packed#3 : Data = wrap#2 (addInteger 20 22) in
trace "answer" in case@Bool true of
  True -> unIData packed#3
  False -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam wrap_2
    [(lam packed_3
      (force
        [[(force (builtin trace)) (con string "answer")]
          (delay (case (con bool True) (error) [(builtin unIData) packed_3]))]))
      [wrap_2 [[(builtin addInteger) (con integer 20)] (con integer 22)]]])
    (lam x_1 [(builtin iData) x_1])])
--- optimized Core
trace "answer" in 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "answer")] (delay (con integer 42))]))
    (force (builtin trace))])
--- result
(con integer 42)
--- logs
["answer"]
--- fresh Core
let wrap#5 : int -> Data = \x#4 : int -> iData x#4 in
let packed#6 : Data = wrap#5 (addInteger 20 22) in
trace "answer" in case@Bool true of
  True -> unIData packed#6
  False -> error
--- lifted Core
let wrap#5 : int -> Data = \x#4 : int -> iData x#4 in
let packed#6 : Data = wrap#5 (addInteger 20 22) in
trace "answer" in case@Bool true of
  True -> unIData packed#6
  False -> error
--- signatures before ANF
let wrap#5 : int -> Data = \x#4 : int -> iData x#4 in
let packed#6 : Data = wrap#5 (addInteger 20 22) in
trace "answer" in case@Bool true of
  True -> unIData packed#6
  False -> error
--- ANF Core
let wrap#5 : int -> Data = \x#4 : int -> iData x#4 in
let anf#7 : int = addInteger 20 22 in
let packed#6 : Data = wrap#5 anf#7 in
trace "answer" in case@Bool true of
  True -> unIData packed#6
  False -> error
--- optimized recursive Core
trace "answer" in 42
--- rewritten Core (no second ANF)
trace "answer" in 42
--- ordinary lowered output
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "answer")] (delay (con integer 42))]))
