crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__composition__folding_reaches_fixed_point_beyond_128_calls.snap
---
source: crates/nash-codegen/src/optimizer_tests/composition.rs
expression: "format!(\"{}\\n--- second invocation Core\\n{}\\n--- second invocation UPLC\\n{}\",\nsemantic_snapshot(&fixture), pretty(twice), result.uplc)"
---
--- unoptimized Core
constr 0 (addInteger 0 1) (addInteger 1 1) (addInteger 2 1) (addInteger 3 1) (addInteger 4 1) (addInteger 5 1) (addInteger 6 1) (addInteger 7 1) (addInteger 8 1) (addInteger 9 1) (addInteger 10 1) (addInteger 11 1) (addInteger 12 1) (addInteger 13 1) (addInteger 14 1) (addInteger 15 1) (addInteger 16 1) (addInteger 17 1) (addInteger 18 1) (addInteger 19 1) (addInteger 20 1) (addInteger 21 1) (addInteger 22 1) (addInteger 23 1) (addInteger 24 1) (addInteger 25 1) (addInteger 26 1) (addInteger 27 1) (addInteger 28 1) (addInteger 29 1) (addInteger 30 1) (addInteger 31 1) (addInteger 32 1) (addInteger 33 1) (addInteger 34 1) (addInteger 35 1) (addInteger 36 1) (addInteger 37 1) (addInteger 38 1) (addInteger 39 1) (addInteger 40 1) (addInteger 41 1) (addInteger 42 1) (addInteger 43 1) (addInteger 44 1) (addInteger 45 1) (addInteger 46 1) (addInteger 47 1) (addInteger 48 1) (addInteger 49 1) (addInteger 50 1) (addInteger 51 1) (addInteger 52 1) (addInteger 53 1) (addInteger 54 1) (addInteger 55 1) (addInteger 56 1) (addInteger 57 1) (addInteger 58 1) (addInteger 59 1) (addInteger 60 1) (addInteger 61 1) (addInteger 62 1) (addInteger 63 1) (addInteger 64 1) (addInteger 65 1) (addInteger 66 1) (addInteger 67 1) (addInteger 68 1) (addInteger 69 1) (addInteger 70 1) (addInteger 71 1) (addInteger 72 1) (addInteger 73 1) (addInteger 74 1) (addInteger 75 1) (addInteger 76 1) (addInteger 77 1) (addInteger 78 1) (addInteger 79 1) (addInteger 80 1) (addInteger 81 1) (addInteger 82 1) (addInteger 83 1) (addInteger 84 1) (addInteger 85 1) (addInteger 86 1) (addInteger 87 1) (addInteger 88 1) (addInteger 89 1) (addInteger 90 1) (addInteger 91 1) (addInteger 92 1) (addInteger 93 1) (addInteger 94 1) (addInteger 95 1) (addInteger 96 1) (addInteger 97 1) (addInteger 98 1) (addInteger 99 1) (addInteger 100 1) (addInteger 101 1) (addInteger 102 1) (addInteger 103 1) (addInteger 104 1) (addInteger 105 1) (addInteger 106 1) (addInteger 107 1) (addInteger 108 1) (addInteger 109 1) (addInteger 110 1) (addInteger 111 1) (addInteger 112 1) (addInteger 113 1) (addInteger 114 1) (addInteger 115 1) (addInteger 116 1) (addInteger 117 1) (addInteger 118 1) (addInteger 119 1) (addInteger 120 1) (addInteger 121 1) (addInteger 122 1) (addInteger 123 1) (addInteger 124 1) (addInteger 125 1) (addInteger 126 1) (addInteger 127 1) (addInteger 128 1) (addInteger 129 1)
--- unoptimized UPLC
(program 1.1.0
  (constr 0
    [[(builtin addInteger) (con integer 0)] (con integer 1)]
    [[(builtin addInteger) (con integer 1)] (con integer 1)]
    [[(builtin addInteger) (con integer 2)] (con integer 1)]
    [[(builtin addInteger) (con integer 3)] (con integer 1)]
    [[(builtin addInteger) (con integer 4)] (con integer 1)]
    [[(builtin addInteger) (con integer 5)] (con integer 1)]
    [[(builtin addInteger) (con integer 6)] (con integer 1)]
    [[(builtin addInteger) (con integer 7)] (con integer 1)]
    [[(builtin addInteger) (con integer 8)] (con integer 1)]
    [[(builtin addInteger) (con integer 9)] (con integer 1)]
    [[(builtin addInteger) (con integer 10)] (con integer 1)]
    [[(builtin addInteger) (con integer 11)] (con integer 1)]
    [[(builtin addInteger) (con integer 12)] (con integer 1)]
    [[(builtin addInteger) (con integer 13)] (con integer 1)]
    [[(builtin addInteger) (con integer 14)] (con integer 1)]
    [[(builtin addInteger) (con integer 15)] (con integer 1)]
    [[(builtin addInteger) (con integer 16)] (con integer 1)]
    [[(builtin addInteger) (con integer 17)] (con integer 1)]
    [[(builtin addInteger) (con integer 18)] (con integer 1)]
    [[(builtin addInteger) (con integer 19)] (con integer 1)]
    [[(builtin addInteger) (con integer 20)] (con integer 1)]
    [[(builtin addInteger) (con integer 21)] (con integer 1)]
    [[(builtin addInteger) (con integer 22)] (con integer 1)]
    [[(builtin addInteger) (con integer 23)] (con integer 1)]
    [[(builtin addInteger) (con integer 24)] (con integer 1)]
    [[(builtin addInteger) (con integer 25)] (con integer 1)]
    [[(builtin addInteger) (con integer 26)] (con integer 1)]
    [[(builtin addInteger) (con integer 27)] (con integer 1)]
    [[(builtin addInteger) (con integer 28)] (con integer 1)]
    [[(builtin addInteger) (con integer 29)] (con integer 1)]
    [[(builtin addInteger) (con integer 30)] (con integer 1)]
    [[(builtin addInteger) (con integer 31)] (con integer 1)]
    [[(builtin addInteger) (con integer 32)] (con integer 1)]
    [[(builtin addInteger) (con integer 33)] (con integer 1)]
    [[(builtin addInteger) (con integer 34)] (con integer 1)]
    [[(builtin addInteger) (con integer 35)] (con integer 1)]
    [[(builtin addInteger) (con integer 36)] (con integer 1)]
    [[(builtin addInteger) (con integer 37)] (con integer 1)]
    [[(builtin addInteger) (con integer 38)] (con integer 1)]
    [[(builtin addInteger) (con integer 39)] (con integer 1)]
    [[(builtin addInteger) (con integer 40)] (con integer 1)]
    [[(builtin addInteger) (con integer 41)] (con integer 1)]
    [[(builtin addInteger) (con integer 42)] (con integer 1)]
    [[(builtin addInteger) (con integer 43)] (con integer 1)]
    [[(builtin addInteger) (con integer 44)] (con integer 1)]
    [[(builtin addInteger) (con integer 45)] (con integer 1)]
    [[(builtin addInteger) (con integer 46)] (con integer 1)]
    [[(builtin addInteger) (con integer 47)] (con integer 1)]
    [[(builtin addInteger) (con integer 48)] (con integer 1)]
    [[(builtin addInteger) (con integer 49)] (con integer 1)]
    [[(builtin addInteger) (con integer 50)] (con integer 1)]
    [[(builtin addInteger) (con integer 51)] (con integer 1)]
    [[(builtin addInteger) (con integer 52)] (con integer 1)]
    [[(builtin addInteger) (con integer 53)] (con integer 1)]
    [[(builtin addInteger) (con integer 54)] (con integer 1)]
    [[(builtin addInteger) (con integer 55)] (con integer 1)]
    [[(builtin addInteger) (con integer 56)] (con integer 1)]
    [[(builtin addInteger) (con integer 57)] (con integer 1)]
    [[(builtin addInteger) (con integer 58)] (con integer 1)]
    [[(builtin addInteger) (con integer 59)] (con integer 1)]
    [[(builtin addInteger) (con integer 60)] (con integer 1)]
    [[(builtin addInteger) (con integer 61)] (con integer 1)]
    [[(builtin addInteger) (con integer 62)] (con integer 1)]
    [[(builtin addInteger) (con integer 63)] (con integer 1)]
    [[(builtin addInteger) (con integer 64)] (con integer 1)]
    [[(builtin addInteger) (con integer 65)] (con integer 1)]
    [[(builtin addInteger) (con integer 66)] (con integer 1)]
    [[(builtin addInteger) (con integer 67)] (con integer 1)]
    [[(builtin addInteger) (con integer 68)] (con integer 1)]
    [[(builtin addInteger) (con integer 69)] (con integer 1)]
    [[(builtin addInteger) (con integer 70)] (con integer 1)]
    [[(builtin addInteger) (con integer 71)] (con integer 1)]
    [[(builtin addInteger) (con integer 72)] (con integer 1)]
    [[(builtin addInteger) (con integer 73)] (con integer 1)]
    [[(builtin addInteger) (con integer 74)] (con integer 1)]
    [[(builtin addInteger) (con integer 75)] (con integer 1)]
    [[(builtin addInteger) (con integer 76)] (con integer 1)]
    [[(builtin addInteger) (con integer 77)] (con integer 1)]
    [[(builtin addInteger) (con integer 78)] (con integer 1)]
    [[(builtin addInteger) (con integer 79)] (con integer 1)]
    [[(builtin addInteger) (con integer 80)] (con integer 1)]
    [[(builtin addInteger) (con integer 81)] (con integer 1)]
    [[(builtin addInteger) (con integer 82)] (con integer 1)]
    [[(builtin addInteger) (con integer 83)] (con integer 1)]
    [[(builtin addInteger) (con integer 84)] (con integer 1)]
    [[(builtin addInteger) (con integer 85)] (con integer 1)]
    [[(builtin addInteger) (con integer 86)] (con integer 1)]
    [[(builtin addInteger) (con integer 87)] (con integer 1)]
    [[(builtin addInteger) (con integer 88)] (con integer 1)]
    [[(builtin addInteger) (con integer 89)] (con integer 1)]
    [[(builtin addInteger) (con integer 90)] (con integer 1)]
    [[(builtin addInteger) (con integer 91)] (con integer 1)]
    [[(builtin addInteger) (con integer 92)] (con integer 1)]
    [[(builtin addInteger) (con integer 93)] (con integer 1)]
    [[(builtin addInteger) (con integer 94)] (con integer 1)]
    [[(builtin addInteger) (con integer 95)] (con integer 1)]
    [[(builtin addInteger) (con integer 96)] (con integer 1)]
    [[(builtin addInteger) (con integer 97)] (con integer 1)]
    [[(builtin addInteger) (con integer 98)] (con integer 1)]
    [[(builtin addInteger) (con integer 99)] (con integer 1)]
    [[(builtin addInteger) (con integer 100)] (con integer 1)]
    [[(builtin addInteger) (con integer 101)] (con integer 1)]
    [[(builtin addInteger) (con integer 102)] (con integer 1)]
    [[(builtin addInteger) (con integer 103)] (con integer 1)]
    [[(builtin addInteger) (con integer 104)] (con integer 1)]
    [[(builtin addInteger) (con integer 105)] (con integer 1)]
    [[(builtin addInteger) (con integer 106)] (con integer 1)]
    [[(builtin addInteger) (con integer 107)] (con integer 1)]
    [[(builtin addInteger) (con integer 108)] (con integer 1)]
    [[(builtin addInteger) (con integer 109)] (con integer 1)]
    [[(builtin addInteger) (con integer 110)] (con integer 1)]
    [[(builtin addInteger) (con integer 111)] (con integer 1)]
    [[(builtin addInteger) (con integer 112)] (con integer 1)]
    [[(builtin addInteger) (con integer 113)] (con integer 1)]
    [[(builtin addInteger) (con integer 114)] (con integer 1)]
    [[(builtin addInteger) (con integer 115)] (con integer 1)]
    [[(builtin addInteger) (con integer 116)] (con integer 1)]
    [[(builtin addInteger) (con integer 117)] (con integer 1)]
    [[(builtin addInteger) (con integer 118)] (con integer 1)]
    [[(builtin addInteger) (con integer 119)] (con integer 1)]
    [[(builtin addInteger) (con integer 120)] (con integer 1)]
    [[(builtin addInteger) (con integer 121)] (con integer 1)]
    [[(builtin addInteger) (con integer 122)] (con integer 1)]
    [[(builtin addInteger) (con integer 123)] (con integer 1)]
    [[(builtin addInteger) (con integer 124)] (con integer 1)]
    [[(builtin addInteger) (con integer 125)] (con integer 1)]
    [[(builtin addInteger) (con integer 126)] (con integer 1)]
    [[(builtin addInteger) (con integer 127)] (con integer 1)]
    [[(builtin addInteger) (con integer 128)] (con integer 1)]
    [[(builtin addInteger) (con integer 129)] (con integer 1)]))
--- optimized Core
constr 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130
--- optimized UPLC
(program 1.1.0
  (constr 0
    (con integer 1)
    (con integer 2)
    (con integer 3)
    (con integer 4)
    (con integer 5)
    (con integer 6)
    (con integer 7)
    (con integer 8)
    (con integer 9)
    (con integer 10)
    (con integer 11)
    (con integer 12)
    (con integer 13)
    (con integer 14)
    (con integer 15)
    (con integer 16)
    (con integer 17)
    (con integer 18)
    (con integer 19)
    (con integer 20)
    (con integer 21)
    (con integer 22)
    (con integer 23)
    (con integer 24)
    (con integer 25)
    (con integer 26)
    (con integer 27)
    (con integer 28)
    (con integer 29)
    (con integer 30)
    (con integer 31)
    (con integer 32)
    (con integer 33)
    (con integer 34)
    (con integer 35)
    (con integer 36)
    (con integer 37)
    (con integer 38)
    (con integer 39)
    (con integer 40)
    (con integer 41)
    (con integer 42)
    (con integer 43)
    (con integer 44)
    (con integer 45)
    (con integer 46)
    (con integer 47)
    (con integer 48)
    (con integer 49)
    (con integer 50)
    (con integer 51)
    (con integer 52)
    (con integer 53)
    (con integer 54)
    (con integer 55)
    (con integer 56)
    (con integer 57)
    (con integer 58)
    (con integer 59)
    (con integer 60)
    (con integer 61)
    (con integer 62)
    (con integer 63)
    (con integer 64)
    (con integer 65)
    (con integer 66)
    (con integer 67)
    (con integer 68)
    (con integer 69)
    (con integer 70)
    (con integer 71)
    (con integer 72)
    (con integer 73)
    (con integer 74)
    (con integer 75)
    (con integer 76)
    (con integer 77)
    (con integer 78)
    (con integer 79)
    (con integer 80)
    (con integer 81)
    (con integer 82)
    (con integer 83)
    (con integer 84)
    (con integer 85)
    (con integer 86)
    (con integer 87)
    (con integer 88)
    (con integer 89)
    (con integer 90)
    (con integer 91)
    (con integer 92)
    (con integer 93)
    (con integer 94)
    (con integer 95)
    (con integer 96)
    (con integer 97)
    (con integer 98)
    (con integer 99)
    (con integer 100)
    (con integer 101)
    (con integer 102)
    (con integer 103)
    (con integer 104)
    (con integer 105)
    (con integer 106)
    (con integer 107)
    (con integer 108)
    (con integer 109)
    (con integer 110)
    (con integer 111)
    (con integer 112)
    (con integer 113)
    (con integer 114)
    (con integer 115)
    (con integer 116)
    (con integer 117)
    (con integer 118)
    (con integer 119)
    (con integer 120)
    (con integer 121)
    (con integer 122)
    (con integer 123)
    (con integer 124)
    (con integer 125)
    (con integer 126)
    (con integer 127)
    (con integer 128)
    (con integer 129)
    (con integer 130)))
--- result
(constr 0
  (con integer 1)
  (con integer 2)
  (con integer 3)
  (con integer 4)
  (con integer 5)
  (con integer 6)
  (con integer 7)
  (con integer 8)
  (con integer 9)
  (con integer 10)
  (con integer 11)
  (con integer 12)
  (con integer 13)
  (con integer 14)
  (con integer 15)
  (con integer 16)
  (con integer 17)
  (con integer 18)
  (con integer 19)
  (con integer 20)
  (con integer 21)
  (con integer 22)
  (con integer 23)
  (con integer 24)
  (con integer 25)
  (con integer 26)
  (con integer 27)
  (con integer 28)
  (con integer 29)
  (con integer 30)
  (con integer 31)
  (con integer 32)
  (con integer 33)
  (con integer 34)
  (con integer 35)
  (con integer 36)
  (con integer 37)
  (con integer 38)
  (con integer 39)
  (con integer 40)
  (con integer 41)
  (con integer 42)
  (con integer 43)
  (con integer 44)
  (con integer 45)
  (con integer 46)
  (con integer 47)
  (con integer 48)
  (con integer 49)
  (con integer 50)
  (con integer 51)
  (con integer 52)
  (con integer 53)
  (con integer 54)
  (con integer 55)
  (con integer 56)
  (con integer 57)
  (con integer 58)
  (con integer 59)
  (con integer 60)
  (con integer 61)
  (con integer 62)
  (con integer 63)
  (con integer 64)
  (con integer 65)
  (con integer 66)
  (con integer 67)
  (con integer 68)
  (con integer 69)
  (con integer 70)
  (con integer 71)
  (con integer 72)
  (con integer 73)
  (con integer 74)
  (con integer 75)
  (con integer 76)
  (con integer 77)
  (con integer 78)
  (con integer 79)
  (con integer 80)
  (con integer 81)
  (con integer 82)
  (con integer 83)
  (con integer 84)
  (con integer 85)
  (con integer 86)
  (con integer 87)
  (con integer 88)
  (con integer 89)
  (con integer 90)
  (con integer 91)
  (con integer 92)
  (con integer 93)
  (con integer 94)
  (con integer 95)
  (con integer 96)
  (con integer 97)
  (con integer 98)
  (con integer 99)
  (con integer 100)
  (con integer 101)
  (con integer 102)
  (con integer 103)
  (con integer 104)
  (con integer 105)
  (con integer 106)
  (con integer 107)
  (con integer 108)
  (con integer 109)
  (con integer 110)
  (con integer 111)
  (con integer 112)
  (con integer 113)
  (con integer 114)
  (con integer 115)
  (con integer 116)
  (con integer 117)
  (con integer 118)
  (con integer 119)
  (con integer 120)
  (con integer 121)
  (con integer 122)
  (con integer 123)
  (con integer 124)
  (con integer 125)
  (con integer 126)
  (con integer 127)
  (con integer 128)
  (con integer 129)
  (con integer 130))
--- logs
[]
--- second invocation Core
constr 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130
--- second invocation UPLC
(program 1.1.0
  (constr 0
    (con integer 1)
    (con integer 2)
    (con integer 3)
    (con integer 4)
    (con integer 5)
    (con integer 6)
    (con integer 7)
    (con integer 8)
    (con integer 9)
    (con integer 10)
    (con integer 11)
    (con integer 12)
    (con integer 13)
    (con integer 14)
    (con integer 15)
    (con integer 16)
    (con integer 17)
    (con integer 18)
    (con integer 19)
    (con integer 20)
    (con integer 21)
    (con integer 22)
    (con integer 23)
    (con integer 24)
    (con integer 25)
    (con integer 26)
    (con integer 27)
    (con integer 28)
    (con integer 29)
    (con integer 30)
    (con integer 31)
    (con integer 32)
    (con integer 33)
    (con integer 34)
    (con integer 35)
    (con integer 36)
    (con integer 37)
    (con integer 38)
    (con integer 39)
    (con integer 40)
    (con integer 41)
    (con integer 42)
    (con integer 43)
    (con integer 44)
    (con integer 45)
    (con integer 46)
    (con integer 47)
    (con integer 48)
    (con integer 49)
    (con integer 50)
    (con integer 51)
    (con integer 52)
    (con integer 53)
    (con integer 54)
    (con integer 55)
    (con integer 56)
    (con integer 57)
    (con integer 58)
    (con integer 59)
    (con integer 60)
    (con integer 61)
    (con integer 62)
    (con integer 63)
    (con integer 64)
    (con integer 65)
    (con integer 66)
    (con integer 67)
    (con integer 68)
    (con integer 69)
    (con integer 70)
    (con integer 71)
    (con integer 72)
    (con integer 73)
    (con integer 74)
    (con integer 75)
    (con integer 76)
    (con integer 77)
    (con integer 78)
    (con integer 79)
    (con integer 80)
    (con integer 81)
    (con integer 82)
    (con integer 83)
    (con integer 84)
    (con integer 85)
    (con integer 86)
    (con integer 87)
    (con integer 88)
    (con integer 89)
    (con integer 90)
    (con integer 91)
    (con integer 92)
    (con integer 93)
    (con integer 94)
    (con integer 95)
    (con integer 96)
    (con integer 97)
    (con integer 98)
    (con integer 99)
    (con integer 100)
    (con integer 101)
    (con integer 102)
    (con integer 103)
    (con integer 104)
    (con integer 105)
    (con integer 106)
    (con integer 107)
    (con integer 108)
    (con integer 109)
    (con integer 110)
    (con integer 111)
    (con integer 112)
    (con integer 113)
    (con integer 114)
    (con integer 115)
    (con integer 116)
    (con integer 117)
    (con integer 118)
    (con integer 119)
    (con integer 120)
    (con integer 121)
    (con integer 122)
    (con integer 123)
    (con integer 124)
    (con integer 125)
    (con integer 126)
    (con integer 127)
    (con integer 128)
    (con integer 129)
    (con integer 130)))
