crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__composition__later_cleanup_and_signature_removal_reach_a_joint_fixed_point.snap
---
source: crates/nash-codegen/src/optimizer_tests/composition.rs
expression: "format!(\"{}\\n--- second invocation\\n{}\\n--- second lowered\\n{}\",\nsemantic_snapshot(&fixture), pretty(twice), result.uplc)"
---
--- unoptimized Core
let f#3 : int -> int -> int = \x#1 : int y#2 : int -> case@Bool true of
  True -> y#2
  False -> x#1 in
addInteger (f#3 7 20) (f#3 7 22)
--- unoptimized UPLC
(program 1.1.0
  [(lam f_3
    [[(builtin addInteger) [[f_3 (con integer 7)] (con integer 20)]]
      [[f_3 (con integer 7)] (con integer 22)]])
    (lam x_1 (lam y_2 (case (con bool True) x_1 y_2)))])
--- optimized Core
42
--- optimized UPLC
(program 1.1.0 (con integer 42))
--- result
(con integer 42)
--- logs
[]
--- second invocation
42
--- second lowered
(program 1.1.0 (con integer 42))
